Fixed the responsivity of the page on smaller devices

--- a/src/styles/Pages/Home.module.scss
+++ b/src/styles/Pages/Home.module.scss
@@ -1,12 +1,24 @@
 .home {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 1500px;
-  &__heroImage {
-    width: 100%;
-    z-index: -1;
-    margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  }
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1500px;
+      &__heroImage {
+          width: 100%;
+          z-index: -1;
+          margin-bottom: -150px;
+          mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      }
+}
+
+@media screen and (max-width: 768px) {
+    .home__heroImage {
+        margin-bottom: -75px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .home__heroImage {
+        margin-bottom: -45px;
+    }
 }
